# visualtex

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  MIGRATION_HANDOFF_CN.txt  PROJECT_ARCHITECTURE_AND_IMPLEMENTATION_PLAN.md  README.md  VisualTeX_验收清单.md  index.html  office-native-dialog.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.office.json  vite.config.ts  vite.office.config.ts  wrangler.jsonc
.github/workflows/: build-windows-linux.yml  ci.yml  landing-page-check.yml  macos.yml  release-v0.1.1.yml  release-v0.1.2.yml  release-v1.0.4.yml  release-v1.0.5.yml  release-v1.1.0.yml  repository.yml  windows.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/macos/: .gitattributes  .gitignore  LICENSE  README.md  VisualTeX_测试构建信息.md  VisualTeX_验收清单.md  office-bridge.html  office-dialog.html  office-windows-ole-bridge.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.office.macos.config.ts  vite.office.windows-ole.config.ts
apps/macos/src-tauri/: Cargo.toml  Info.macos.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/macos/src-tauri/icons/: icon.icns
apps/macos/src-tauri/ocr/: worker.py
apps/macos/src-tauri/resources/windows-office/: README.txt
apps/macos/src-tauri/src/: lib.rs  ocr_offline.rs
apps/macos/src-tauri/src/ocr/: manager.rs
apps/macos/src-tauri/src/office/: background.rs  certificate.rs  formula_cache.rs  lifecycle.rs  macos_offline.rs  macos_offline_installer.rs  mod.rs  powerpoint_native.rs  server.rs  sessions.rs  state.rs  word_native.rs
apps/macos/src-tauri/src/office/platform/: non_macos_background.rs
apps/macos/src-tauri/windows/: hooks.nsh
apps/vscode-extension/: package.json  tsconfig.json
apps/windows/: .gitignore  LaTeX_Visual_Formula_Editor_Project_Spec.md  README.md  index.html  office-macos-bridge.html  package-lock.json  package.json  vite.config.ts  vite.office.macos.config.ts
crates/vt-bridge/: Cargo.toml
crates/vt-bridge/src/: lib.rs
crates/vt-buffer/: Cargo.toml
crates/vt-compiler/: Cargo.toml
crates/vt-compiler/src/: lib.rs
crates/vt-core/: Cargo.toml
crates/vt-core/src/: lib.rs
crates/vt-index/: Cargo.toml
crates/vt-latex-semantic/: Cargo.toml
crates/vt-latex-semantic/src/: lib.rs
crates/vt-latex-syntax/: Cargo.toml
crates/vt-latex-syntax/src/: lib.rs
crates/vt-layout-map/: Cargo.toml
crates/vt-layout-map/src/: lib.rs
crates/vt-models/: Cargo.toml
crates/vt-models/src/: lib.rs
crates/vt-ocr/: Cargo.toml
crates/vt-ocr/src/: lib.rs
crates/vt-pdf/: Cargo.toml
crates/vt-pdf/src/: lib.rs
crates/vt-project/: Cargo.toml
crates/vt-project/src/: lib.rs
crates/vt-protocol/: Cargo.toml
crates/vt-rpc/: Cargo.toml
crates/vt-rpc/src/: lib.rs
crates/vt-synctex/: Cargo.toml
crates/vt-synctex/src/: lib.rs
crates/vt-uri/: Cargo.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  MACOS_OFFLINE_OFFICE_ACCEPTANCE.md  MACOS_OFFLINE_OFFICE_ARCHITECTURE.md  PROTOCOL.md  SECURITY.md  WEB_DEPLOYMENT.md  WINDOWS_LINUX_RELEASE.md  WINDOWS_OFFICE_ARCHITECTURE.md
docs/adr/: 0001-authoritative-text-buffer.md  0002-tolerant-latex-semantics.md  0003-real-tex-pdf.md  0004-restricted-local-execution.md  0005-tree-sitter-incremental-syntax.md
docs/implementation-logs/: 2026-07-15-windows-native-office-ole.md  2026-07-16-word-omml-ole-dual-mode.md
fixtures/visual-edit/: main.tex
ocr/: README.md  formula_ocr_server.py  normalize_latex.py  protocol.py  requirements.txt
ocr/tests/: test_worker_preprocess.py
office/macos-offline/: BUILD_ADDINS.md  POWERPOINT_INSTALL.md  PROTOCOL.md
office/manifests/: VisualTeX.PowerPoint.xml  VisualTeX.Word.xml  visualtex-powerpoint.template.xml  visualtex-word.template.xml
public/: robots.txt  sitemap.xml
scripts/: build_platform_bundle.mjs  build_windows_office.ps1  close_empty_word_automation_instances.ps1  editor_history_regression.mjs  editor_regression_smoke.mjs  ensure_windows_office_certificate.ps1  export_real_formula_fixtures.mts  history_manager_smoke.mjs  ime_enter_regression.mjs  inspect_running_office.ps1  install_current_windows_release_silently.ps1  install_windows_ole.ps1  landing_page_smoke.mjs  macos_clean_install_acceptance.sh  macos_offline_office_smoke.mjs  office_bridge_lifecycle_smoke.mjs  office_metadata_smoke.mjs  office_ocr_transport_smoke.mjs  office_platform_boundary_smoke.mjs  package_macos_offline_addins.mjs  package_windows_acceptance.mjs  platform_onboarding_smoke.mjs  powerpoint_adapter_smoke.mjs  prepare_office_platform_resources.mjs  prepare_office_resources.mjs  prepare_offline_ocr_runtime.py  rebuild_macos_word_addin.mjs  register_macos_dev_url_handler.mjs  run_powerpoint_adapter_smoke.mjs  suggestion_settings_smoke.mjs  svg_export_smoke.mjs  tauri_dev.mjs  test_windows_formula_ole_server.ps1  test_windows_native_office_ole.ps1  test_word_omml_real_double_click.ps1  uninstall_windows_vsto.ps1  update_notes_smoke.mjs  verify_installed_windows_release.ps1  verify_macos_app_icon.py  verify_macos_dmg.sh  (+5 more)
src/: App.tsx  main.tsx  platform.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/ocr/: worker.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ocr/: manager.rs  protocol.rs
src-tauri/src/office/: background.rs  certificate.rs  formula_cache.rs  installer.rs  lifecycle.rs  macos_offline.rs  macos_offline_installer.rs  manifest.rs  mod.rs  powerpoint_native.rs  server.rs  sessions.rs  state.rs  windows_backend.rs  windows_pipe.rs
src-tauri/src/office/platform/: macos.rs  mod.rs  non_macos_installer.rs  non_macos_manifest.rs  non_macos_powerpoint_native.rs  non_macos_word_native.rs
src-tauri/windows/: hooks.nsh
tools/: verify_repository_structure.mjs
(+448 files in other folders)
