[package]
name = "visualtex"
version = "0.1.2"
description = "A visual LaTeX formula editor"
authors = ["VisualTeX"]
edition = "2021"

[lib]
name = "visualtex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
