[package]
name = "visualtex"
version = "1.0.6"
description = "A visual LaTeX formula editor"
authors = ["VisualTeX"]
license = "MIT"
edition = "2021"

[lib]
name = "visualtex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
tauri-plugin-opener = "2.5.4"
axum = { version = "0.8.9", features = ["json", "tokio"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tokio = { version = "1", features = ["fs", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.7.0", features = ["fs", "limit", "set-header"] }
rcgen = "0.14.8"
time = "0.3"
getrandom = "0.3"
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
x509-parser = "0.18.1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
