[package]
name = "visualtex"
version = "1.0.18"
description = "A visual LaTeX formula editor"
authors = ["VisualTeX"]
license = "MIT"
edition = "2021"

[lib]
name = "visualtex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
tauri-plugin-opener = "2.5.4"
axum = { version = "0.8.9", features = ["json", "tokio"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tokio = { version = "1", features = ["fs", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.7.0", features = ["fs", "limit", "set-header"] }
rcgen = "0.14.8"
time = "0.3"
getrandom = "0.3"
hex = "0.4"
flate2 = "1.1"
tar = "0.4"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-single-instance = "2.4.2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSEvent", "NSRunningApplication", "NSWorkspace", "block2"] }
objc2-foundation = { version = "0.3.2", features = ["NSString"] }

[dev-dependencies]
tempfile = "3"
x509-parser = "0.18.1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
