[package]
name = "visualtex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "visualtex"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
vt-bridge.workspace = true
vt-core.workspace = true
vt-models.workspace = true
vt-ocr.workspace = true
vt-pdf.workspace = true
vt-rpc.workspace = true
vt-protocol.workspace = true
vt-uri.workspace = true
