[package]
name = "vt-latex-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
sha2.workspace = true
uuid.workspace = true
vt-protocol.workspace = true

[dev-dependencies]
insta = { version = "1.43", features = ["json"] }
proptest.workspace = true
