[package]
name = "visualtex-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
name = "visualtex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
png = "0.17"
tauri-build = { version = "2.5", features = [] }

[dependencies]
anyhow.workspace = true
image.workspace = true
notify.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tauri = { version = "2.10", features = ["protocol-asset"] }
tauri-plugin-deep-link = "2.4"
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = "2.4"
tauri-plugin-opener = "2.5"
tokio.workspace = true
vt-core.workspace = true
vt-models.workspace = true
vt-ocr.workspace = true
vt-protocol.workspace = true
vt-uri.workspace = true

[dev-dependencies]
tempfile.workspace = true
